Remove sensitive files and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,12 @@ env/
 build/
 dist/
 *.egg-info/
+.build/
+.swiftpm/
+.swift-version
+.**-apple-darwin*
+abagnale.app/
+
 
 # Logs and databases
 *.log
@@ -44,3 +50,4 @@ Thumbs.db
 # Additional patterns from scan
 *auth*
 .db
+.*.db
